--- a/Northwind/Northwind.MvcWebUI/log4net.config
+++ b/Northwind/Northwind.MvcWebUI/log4net.config
@@ -8,18 +8,11 @@
 			<file value="log.json" />
 			<layout type="Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout" />
 		</appender>
-		<appender name="SimpleFileAppender" type="log4net.Appender.FileAppender">
-			<file value="log.txt" />
-			<layout type="log4net.Layout.SimpleLayout" />
-		</appender>
-		<!-->appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="NewGenFramework.Core.CrossCuttingConcern.Logging.Log4Net.Layouts.JsonLayout" />
-    </-->
 		<appender name="SqlServerAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<connectionString value="Data Source=(localdb)\MSSQLLocalDB; initial catalog=Northwind; Integration Security=true;" />
-			<commandText value="INSERT INTO LogJson ([LogDetail],[Date],[Audit]) VALUES (@logDetail,@log_date,@audit)" />
+			<connectionString value="Data Source=(localdb)\mssqllocaldb;Initial Catalog=Northwind;Integrated Security=true;" />
+			<commandText value="INSERT INTO Logs ([Detail],[Date],[Audit]) VALUES (@logDetail,@log_date,@audit)" />
 			<parameter>
 				<parameterName value="@logDetail" />
 				<dbType value="String" />
@@ -29,7 +22,7 @@
 			<parameter>
 				<parameterName value="@log_date" />
 				<dbType value="DateTime" />
-				<layout type="log4net.Layout.RawTimeStampLayout" />
+				<layout type="log4net.Layout.PatternLayout" value="%date{dd'-'MM'-'yyyy HH':'mm':'ss'.'fff}" />
 			</parameter>
 			<parameter>
 				<parameterName value="@audit" />
@@ -38,27 +31,13 @@
 				<layout type="log4net.Layout.PatternLayout" value="%level" />
 			</parameter>
 		</appender>
-		<appender name="EventLogAppender" type="log4net.Appender.EventLogAppender" >
-			<applicationName value="DemoUygulama" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger [%property{sessionId}] [%property{page}] - %message%newline" />
-			</layout>
-		</appender>
-		<logger name="FileLogger">
+		<logger name="JsonFileLogger">
 			<level value="ALL" />
 			<appender-ref ref="JsonFileAppender" />
 		</logger>
-		<logger name="DataBaseLogger">
-			<level value="ALL" />
+		<logger name="DatabaseLogger">
+			<level value="All" />
 			<appender-ref ref="SqlServerAppender" />
-		</logger>
-		<!--logger name="ConsoleLogger">
-      <level value="ALL" />
-      <appender-ref ref="ConsoleAppender" />
-    </logger-->
-		<logger name="EventLogger">
-			<level value="ALL" />
-			<appender-ref ref="EventLogAppender" />
 		</logger>
 	</log4net>
 </configuration>
