--- a/Northwind/Northwind.Entities/Northwind.Entities.csproj
+++ b/Northwind/Northwind.Entities/Northwind.Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ComplexTypes\ProductDetail.cs" />
     <Compile Include="Domains\Category.cs" />
     <Compile Include="Domains\Product.cs" />
+    <Compile Include="Domains\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
