--- a/Northwind/Northwind.Entities/Northwind.Entities.csproj
+++ b/Northwind/Northwind.Entities/Northwind.Entities.csproj
@@ -42,9 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComplexTypes\ProductDetail.cs" />
+    <Compile Include="ComplexTypes\UserRoleDto.cs" />
     <Compile Include="Domains\Category.cs" />
     <Compile Include="Domains\Product.cs" />
+    <Compile Include="Domains\Role.cs" />
     <Compile Include="Domains\User.cs" />
+    <Compile Include="Domains\UserRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
