--- a/Northwind/Northwind.Business.Tests/packages.config
+++ b/Northwind/Northwind.Business.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net452" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net452" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="Moq" version="4.14.1" targetFramework="net452" />
